# DecafCompiler

./: .gitignore  CMakeLists.txt  README.md  chiz  fast-run.sh  log.txt  run.sh
TAC_to_assembly/: AppendS.txt  Function_Call.cpp  ITOF_FTOI.txt  TAC_to_assembly.cpp  a.out  ans.txt  array.txt  assign_test.txt  boolean_output.txt  complex_function.txt  example.txt  example_2.txt  float.txt  float_compare.txt  float_function.txt  function_with_return.txt  log-blackJackBug.txt  log6.txt  my_test.asm  readme_test.txt  rec_function.txt  sample.txt  string_input_output.txt  string_literal.txt
src/: Makefile  TacToAssembly.cpp  TacToAssembly.h  main.cpp  parser.tab.c  parser.y  scanner.l
src/SymbolTable/: ClassType.cpp  ClassType.h  Scope.cpp  Scope.h  SymbolTableEntry.cpp  SymbolTableEntry.h  TemporaryGenerator.cpp  TemporaryGenerator.h  Type.h  TypeName.cpp  TypeName.h  UniqueGenerator.cpp  UniqueGenerator.h
src/SyntaxTree/: AccessMode.cpp  AccessMode.h  Actuals.cpp  Actuals.h  BreakStmt.cpp  BreakStmt.h  Call.cpp  Call.h  ClassDecl.cpp  ClassDecl.h  Constant.cpp  Constant.h  ContinueStmt.cpp  ContinueStmt.h  Decl.cpp  Decl.h  Expr.cpp  Expr.h  Extends.cpp  Extends.h  Field.cpp  Field.h  Fields.cpp  Fields.h  ForStmt.cpp  ForStmt.h  Formals.cpp  Formals.h  FunctionDecl.cpp  FunctionDecl.h  IfStmt.cpp  IfStmt.h  Implements.cpp  Implements.h  (+35 more)
tests/: t100-simple-global.d  t101-simple-local.d  t102-read-int.d  t102-read-int.in  t103-binary-operator.d  t105-bool.d  t106-comparison.d  t109-for.d  t109-for.out  t110-break-continue.out  t112-fact.d  t112-fact.out  t113-array.d  t113-array.in  t114-undefined-function.out  t115-undefined-variable.d  t116-undefined-method.d  t20.in  t201-comment.in  t201-comment.out  t201-simple-class.d  t202-class-method.d  t202-undefined-middle.in  t202-undefined-middle.out  t204-class-casting.d  t301-floating-point.d  t301-floating-point.out  t302-floating-point-function.d  t303-floating-point-condition.d  t304-floating-point-condition.d  t401-string-assignment.d  t501-polymorphism.d  t501-polymorphism.out  t502-append-array.d  t502-append-array.out  t503-string-builder.d  t504-unary-op.out  t505-boolean-work.d  t506-sieve.out  t508-blackjack-simple.d  (+2 more)
(+27 files in other folders)
